--- a/nojira-daemon/nojira-daemon.csproj
+++ b/nojira-daemon/nojira-daemon.csproj
@@ -84,8 +84,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiModule.cs" />
+    <Compile Include="Config.cs" />
+    <Compile Include="DB.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SiteModule.cs" />
+    <Compile Include="Www.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
