--- a/Nojira.Daemon/Nojira.Daemon.csproj
+++ b/Nojira.Daemon/Nojira.Daemon.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{851535CD-F193-4F9E-AAEA-6767EE102824}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>nojira_daemon</RootNamespace>
-    <AssemblyName>nojira-daemon</AssemblyName>
+    <RootNamespace>Nojira.Daemon</RootNamespace>
+    <AssemblyName>Nojira.Daemon</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
