--- a/Nojira.Server/Nojira.Server.csproj
+++ b/Nojira.Server/Nojira.Server.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{851535CD-F193-4F9E-AAEA-6767EE102824}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Nojira.Daemon</RootNamespace>
-    <AssemblyName>Nojira.Daemon</AssemblyName>
+    <RootNamespace>Nojira.Server</RootNamespace>
+    <AssemblyName>Nojira.Server</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
