--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       - backup/*
       
 jobs:
-  build-nojira-server:
+  build-release:
 
     runs-on:  windows-latest
 
@@ -23,35 +23,4 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build Nojira.Server/Nojira.Server.csproj --no-restore --configuration Release
-      
-  build-nojira-client:
-
-    runs-on:  windows-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build Nojira.Client/Nojira.Client.csproj --no-restore --configuration Release
-      
-  build-nojira-test:
-
-    runs-on:  windows-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build Nojira.Test/Nojira.Test.csproj --no-restore --configuration Release
-      
+      run: dotnet build Nojira.sln --no-restore --configuration Release
