--- a/Nojira.Server/packages.config
+++ b/Nojira.Server/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Nancy" version="2.0.0" targetFramework="net461" />
+  <package id="Nancy.Authentication.Basic" version="2.0.0" targetFramework="net461" />
   <package id="Nancy.Hosting.Self" version="2.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="sqlite-net-pcl" version="1.7.335" targetFramework="net461" />
