--- a/Nojira.Server/Nojira.Server.csproj
+++ b/Nojira.Server/Nojira.Server.csproj
@@ -79,4 +79,8 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if $(ConfigurationName) == Release xcopy /s /Q /Y "$(TargetDir)*" "$(SolutionDir)\.release\unreleased\"
+if $(ConfigurationName) == Release xcopy /s /Q /Y "$(ProjectDir)www\*" "$(SolutionDir)\.release\unreleased\www\"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
