--- a/Nojira.Test/Nojira.Test.csproj
+++ b/Nojira.Test/Nojira.Test.csproj
@@ -55,4 +55,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if $(ConfigurationName) == Release xcopy /s /Q /Y "$(TargetDir)*" "$(SolutionDir)\.release\unreleased\"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
