Migrated to form auth, added admin user role, added user guid for auth, added admin webpage.

--- a/Nojira.Server/Nojira.Server.csproj
+++ b/Nojira.Server/Nojira.Server.csproj
@@ -57,6 +57,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\AdminModel.cs" />
+    <Compile Include="Models\MasterModel.cs" />
+    <Compile Include="Modules\AdminModule.cs" />
     <Compile Include="Modules\ApiModule.cs" />
     <Compile Include="NojiraBootstrapper.cs" />
     <Compile Include="Models\IndexModel.cs" />
